<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_piggybanks"
        android:icon="@drawable/ic_coin_24dp"
        android:title="@string/title_piggybanks" />

    <item
        android:id="@+id/navigation_debttracker"
        android:icon="@drawable/ic_debt_24dp"
        android:title="@string/title_debttracker" />

    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_subscriptions" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/title_more" />

</menu>