<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.oinkonomics.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_piggybanks"
        android:name="com.example.oinkonomics.ui.dashboard.DashboardFragment"
        android:label="@string/title_piggybanks"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_debttracker"
        android:name="com.example.oinkonomics.ui.debttracker.DebtTrackerFragment"
        android:label="@string/title_debttracker"
        tools:layout="@layout/fragment_debttracker" />

    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="com.example.oinkonomics.ui.notifications.NotificationsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.oinkonomics.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>